--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Manav - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <section class="profile">
         <img src="./assets/rocky.jpeg" alt="Rocky Img">
-        <h1>Rocky</h1>
-        <h4>Web Developer</h4>
+        <h1>Manav</h1>
+        <h4>Computer Engineering Student at USF</h4>
         <div class="social-media">
             <a href="#" class="social-media-link"><img src="./assets/github-icon.webp" alt="GitHub"></a>
             <a href="#" class="social-media-link"><img src="./assets/linkedin-logo.png" alt="LinkedIn"></a>
@@ -21,7 +21,7 @@
     </section>
     <section class="about">
         <h2>About Me</h2>
-        <p>Welcome to my corner of the internet! I'm [Your Name], a passionate [your profession or field] based in [your location]. I have a deep love for [mention your interests or passions], and I'm on a journey to [mention your goals or aspirations].</p>
+        <p>Welcome to my corner of the internet! I'm Manav, a passionate CE based in Tampa, FL. I have a deep love for [mention your interests or passions], and I'm on a journey to [mention your goals or aspirations].</p>
         <br>
         <p>My story begins with [briefly mention your background or experiences]. Over the years, I've honed my skills in [mention your skills or expertise] and collaborated on various exciting projects. I thrive on challenges and believe that [mention your personal philosophy or values].</p>
         <h4><a href="https://www.clestatecareers.com/post/john-doe-resume-sample">Check out my resume!</a></h4>
